Changed sleep_* to time_* and made everything lowercase.

--- a/okcscrape3/config.ini
+++ b/okcscrape3/config.ini
@@ -1,17 +1,16 @@
 [global]
-CHROME_DRIVER_PATH=chromedriver_win32/chromedriver.exe
-BASE_URL=http://www.okcupid.com/
-SLEEP_BETWEEN_QUERIES=10
-MAX_QUERY_ATTEMPTS=2
+webdriver_path = chromedriver_win32/chromedriver.exe
+base_url = http://www.okcupid.com/
+time_between_queries = 11
+max_query_attempts = 2
 
 [findusers]
-MATCH_URL_SUFFIX=match
-;USERNAMES_NAME=span
-;USERNAMES_ATTRS=
-USERNAMES_OUTFILE=username_log.csv
-NUM_PROFILES=1000
+match_url_suffix = match
+usernames_outfile = username_log.csv
+num_profiles = 1000
 
 [fetchusers]
-COOKIES_FILE=cookies.pickle
-PROFILES_OUTFILE=profiles
-NUM_USERS=1000
+cookies_file = cookies.pickle
+profiles_outfile = profiles
+num_users = 1000
+
