Made config names more consistent.

--- a/okcscrape3/config.ini
+++ b/okcscrape3/config.ini
@@ -6,11 +6,11 @@ max_query_attempts = 2
 
 [findusers]
 match_url_suffix = match
-usernames_outfile = username_log.csv
-num_profiles = 1000
+usernames_outfile = usernames.csv
+num_usernames = 1000
 
 [fetchusers]
 cookies_file = cookies.pickle
-profiles_outfile = profiles
-num_users = 1000
+profiles_outfile = profiles.csv
+num_profiles = 1000
 
