Moved print_config subroutine to its own module and updated function calls to it.

--- a/okcscrape3/config.ini
+++ b/okcscrape3/config.ini
@@ -1,16 +1,16 @@
 [global]
-webdriver_path = chromedriver_win32/chromedriver.exe
-base_url = http://www.okcupid.com/
-time_between_queries = 11
+webdriver_path = chromedriver.exe
+base_url = https://www.okcupid.com/
+time_between_queries = 7
 max_query_attempts = 2
 
 [findusers]
 match_url_suffix = match
-usernames_outfile = usernames.csv
-num_usernames = 1000
+usernames_outfile = data\usernames.csv
+num_usernames = 10
 
 [fetchusers]
 cookies_file = cookies.pickle
-profiles_outfile = profiles.csv
+profiles_outfile = data\profiles.csv
 num_profiles = 1000
 
