Renamed functions.py to findusers.py and updates gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 !okcscrape3/__init__.py
 !okcscrape3/__main__.py
 !okcscrape3/config.ini
-!okcscrape3/fuctions.py
 !okcscrape3/util.py
+!okcscrape3/findusers.py
 !okcscrape3/fetchusers.py
 !okcscrape3/print_config.py
