Added profile_html_targets_file param.

--- a/okcscrape3/config.ini
+++ b/okcscrape3/config.ini
@@ -10,8 +10,8 @@ usernames_outfile = data\usernames.csv
 num_usernames = 15
 
 [fetchusers]
-cookies_file = cookies.pickle
+cookies_file = cookies.json
 usernames_file = data\usernames.csv
 profiles_outfile = data\profiles.csv
-num_profiles = 0
-
+num_profiles = 1
+profile_html_targets_file = profile_html_targets.json
