Finally decided to go with JSON for storing profiles. Updated parameters to reflect this decision.

--- a/okcscrape3/config.ini
+++ b/okcscrape3/config.ini
@@ -7,12 +7,12 @@ max_query_attempts = 2
 [findusers]
 match_url_suffix = match
 usernames_outfile = data\usernames.csv
-num_usernames = 15
+num_usernames = 10
 
 [fetchusers]
 cookies_file = cookies.json
 usernames_file = data\usernames.csv
-profiles_outfile = data\profiles.csv
+profiles_outfile = data\profiles.json
 num_profiles = 1
 profile_html_targets_file = profile_html_targets.json
 
